# OSGEditor

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/App/: CMakelists.txt
src/App/include/: EditorRenderWidget.h  EditorUI.h  Mainwindow.h
src/App/source/: EditorRenderWidget.cpp  EditorUI.cpp  Mainwindow.cpp  main.cpp
src/Runtime/: CMakelists.txt  Engine.cpp  Engine.h
src/Runtime/Core/Base/: macro.h
src/Runtime/Function/HUD/: HUD.cpp  HUD.h  SelectQuad.cpp  SelectQuad.h
src/Runtime/Function/Render/: Renderer.cpp  Renderer.h
src/Runtime/Function/Scene/: Scene.cpp  Scene.h  Viewer.cpp  Viewer.h
src/Runtime/Function/UI/: UIInterface.h
src/Runtime/Resource/Components/: Mesh.h  Transform.h
src/Runtime/Resource/Data/Implement/: OSGGdalTexture.cpp  OSGGdalTexture.h  VCGMesh.cpp  VCGMesh.h
src/Runtime/Resource/Data/Implement/VCG/: VCGMesh.cpp  VCGMesh.h
src/Runtime/Resource/Data/Interface/: Mesh.h
src/Vendors/: CMakelists.txt
src/Vendors/entt/entt/: entt.hpp
src/Vendors/imgui/docs/: CHANGELOG.txt
src/Vendors/spdlog/include/spdlog/fmt/bundled/: args.h
src/Vendors/vcglib/vcg/complex/algorithms/: curve_on_manifold.h
src/Vendors/vcglib/wrap/gl/: gl_mesh_attributes_multi_viewer_bo_manager.h
